rename lint/validate to analyze for consistency.
